--- a/mainApp/templates/report_batch_pdf_template2.html
+++ b/mainApp/templates/report_batch_pdf_template2.html
@@ -37,10 +37,10 @@
                             <td><i>{{header.department.name}}</i></td>
                         </tr>
                         <tr class="text-center align-middle h5">
-                            <td><i>DN: {{header.dnno}}</i><br>Eff. Date: {{header.effectivedate|date:"j/n/Y"}}</td>
+                            <td><i>DN: {{header.dnno}}</i><br>Eff. Date: {{header.effectivedate|date:"d-m-Y"}}</td>
                             <td><i>This document will be reviewed on:
-                                    <br>{{header.reviewdate|date:"j/n/Y"}}</i></td>
-                            <td><i>Rev of DN: {{header.dnrev}}<br>Date: {{header.createdon|date:"j/n/Y"}}</i></td>
+                                    <br>{{header.reviewdate|date:"F Y"}}</i></td>
+                            <td><i>Rev of DN: {{header.dnrev}}<br>Date: {{header.createdon|date:"d-m-Y"}}</i></td>
                         </tr>
                         <tr>
                             <td colspan="3">
@@ -62,6 +62,7 @@
                                                     <th>Tanggal Penimbangan</th>
                                                     <th>No. Karton</th>
                                                     <th>Hasil Penimbangan (gram)</th>
+                                                    <th>Operator</th>
                                                 </tr>
                                                 {% if not data %}
                                                 <tr class="text-center">
@@ -84,6 +85,7 @@
                                                         Belum Ditimbang
                                                         {% endif %}
                                                     </td>
+                                                    <td>{{row.operator1}}<br>{{row.operator2}}</td>
                                                 </tr>
                                                 {% if forloop.counter|divisibleby:rowlen and forloop.counter != data.count %}
                                             </table>
@@ -94,6 +96,7 @@
                                                     <th>Tanggal Penimbangan</th>
                                                     <th>No. Karton</th>
                                                     <th>Hasil Penimbangan (gram)</th>
+                                                    <th>Operator</th>
                                                 </tr>
                                                 {% endif %}
                                                 {%endfor%}
@@ -115,7 +118,7 @@
                             <td>Petugas Penimbangan</td>
                             <td>Petugas Gudang</td>
                             <td>Supervisor Produksi</td>
-                            <td>Supervisor Gudang</td>
+                            <td>Supervisor DS&S</td>
                         </tr>
                         <tr height="100px">
                             <td>Paraf:</td>
@@ -124,10 +127,10 @@
                             <td>Paraf:</td>
                         </tr>
                         <tr>
-                            <td>Nama: {{signature.operator|default_if_none:"-"}}</td>
+                            <td>Nama: {{signature.operator.first_name}} {{signature.operator.last_name}}</td>
                             <td>Nama: {{signature.petugasgudang|default_if_none:"-"}}</td>
-                            <td>Nama: {{signature.spvgudang|default_if_none:"-"}}</td>
-                            <td>Nama: {{signature.spvpabrik|default_if_none:"-"}}</td>
+                            <td>Nama: {{signature.spvgudang.first_name}} {{signature.spvgudang.last_name}}</td>
+                            <td>Nama: {{signature.spvpabrik.first_name}} {{signature.spvpabrik.last_name}}</td>
                         </tr>
                         <tr>
                             <td>Tanggal:</td>
