--- a/secureapp/templates/registration/userlist.html
+++ b/secureapp/templates/registration/userlist.html
@@ -36,6 +36,8 @@
                                     <thead>
                                         <tr>
                                             <th>Username</th>
+                                            <th>First Name</th>
+                                            <th>Last Name</th>
                                             <th>Group</th>
                                             <th>Action</th>
                                         </tr>
@@ -44,6 +46,8 @@
                                         {%for row in data%}
                                         <tr>
                                             <td>{{row.username}}</td>
+                                            <td>{{row.first_name}}</td>
+                                            <td>{{row.last_name}}</td>
                                             <td>{% for group in row.groups.all %}
                                             {{ group.name }}
                                             {% endfor %}</td>
