--- a/mainApp/templates/history.html
+++ b/mainApp/templates/history.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 {% block titlepage %}
-<h1>Report Batch</h1>
+<h1>Weighing History</h1>
 {% endblock %}
 {% block sidebar %}
 {% include "sidebar.html" %}
