--- a/mainApp/templates/sidebar.html
+++ b/mainApp/templates/sidebar.html
@@ -116,6 +116,12 @@
             </a>
             <ul class="nav nav-treeview">
                 <li class="nav-item">
+                    <a href="{% url 'config'%}" class="nav-link">
+                        <i class="far fa-circle nav-icon"></i>
+                        <p>Configuration</p>
+                    </a>
+                </li>
+                <li class="nav-item">
                     <a href="{% url 'changepwd'%}" class="nav-link">
                         <i class="far fa-circle nav-icon"></i>
                         <p>Change Password</p>
