--- a/mainApp/templates/weighingstateclose.html
+++ b/mainApp/templates/weighingstateclose.html
@@ -38,6 +38,7 @@
                                             <th>Product Name</th>
                                             <th>Batch No</th>
                                             <th>Weight Adj.</th>
+                                            <th>Jumlah Koli</th>
                                             <th>Exp. Date</th>
                                             <th>Open Status</th>
                                             <th>Status</th>
@@ -52,6 +53,7 @@
                                             <td>{{row.product.name}}</td>
                                             <td><a href="{% url 'viewbatchhistory' row.batchno %}">{{row.batchno}}</a></td>
                                             <td>{{row.weightadjustment}}</td>
+                                            <td>{{row.jumlahkoli}}</td>
                                             <td>{{row.expireddate}}</td>
                                             <td>{{row.pendingstatus|yesno:'Open, Close'}}</td>
                                             <td>{{row.status|yesno:'Aktif, Tidak Aktif'}}</td>
