--- a/mainApp/templates/history.html
+++ b/mainApp/templates/history.html
@@ -77,6 +77,7 @@
                             <th>Weight</th>
                             <th>Status</th>
                             <th>Input Date</th>
+                            <th>Ptgs Timbang / Gudang</th>
                             <th>Action</th>
                         </tr>
                     </thead>
@@ -99,6 +100,7 @@
                                 {% endif %}
                             </td>
                             <td>{{row.input_date|date:"Y/n/j h:m:i"}}</td>
+                            <td>{{row.operator}} / <br>{{row.petugasgudang}}</td>
                             <td>
                                 <button class="btn btn-danger deleteBox" data-id="{{row.id}}">
                                     <i class="fas fa-times"></i>
