--- a/mainApp/templates/report_batch.html
+++ b/mainApp/templates/report_batch.html
@@ -39,6 +39,8 @@
                             <th>Weight (gram)</th>
                             <th>Status</th>
                             <th>Input Date</th>
+                            <th>Ptgs Timbang</th>
+                            <th>Ptgs Gudang</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -52,12 +54,14 @@
                                 {% if row.status == 1 %}
                                 OK
                                 {% elif row.status == 3 %}
-                                Last Box
-                                {% else %}
+                                Last Box=
+                                {% elif row.status == 2 %}
                                 <i class="fas fa-times text-red"></i>
                                 {% endif %}
                             </td>
                             <td>{{row.input_date|date:"Y/n/j h:m:i"}}</td>
+                            <td>{{row.operator}}</td>
+                            <td>{{row.petugasgudang}}</td>
                         </tr>
                         {%endfor%}
                     </tbody>
@@ -80,7 +84,7 @@
         var inputdatefrom = $("#id_inputdatefrom").val()
         var inputdateto = $("#id_inputdateto").val()
         var reporttype = $("#id_reporttype").val()
-        window.open(url + "?productid=" + productid + "&batchno=" + batchno + "&inputdatefrom=" + inputdatefrom + "&inputdateto=" + inputdateto)
+        window.open(url + "?productid=" + productid + "&batchno=" + batchno + "&inputdatefrom=" + inputdatefrom + "&inputdateto=" + inputdateto + "&reporttype=" + reporttype)
     })
 
     $("#exportbatchpdf").click(function () {
