--- a/mainApp/templates/report_batch_pdf_template.html
+++ b/mainApp/templates/report_batch_pdf_template.html
@@ -41,7 +41,7 @@
             <td><i>DN: {{header.dnno}}</i><br>Eff. Date: {{header.effectivedate|date:"j/n/Y"}}</td>
             <td style="text-align: center;"><i>This document will be reviewed on:
                     <br>{{header.reviewdate|date:"j/n/Y"}}</i></td>
-            <td><i>Rev of DN: {{header.dnrev}}<br>Date: {{header.createdon|date:"j/n/Y"}}</i></td>
+            <td style="text-align: left;"><i>Rev of DN: {{header.dnrev}}<br>Date: {{header.createdon|date:"j/n/Y"}}</i></td>
         </tr>
         <tr>
             <td colspan="3" style="padding: 10px 30px;">
