--- a/mainApp/templates/report_batch_pdf_template2.html
+++ b/mainApp/templates/report_batch_pdf_template2.html
@@ -40,7 +40,7 @@
                             <td><i>DN: {{header.dnno}}</i><br>Eff. Date: {{header.effectivedate|date:"d b Y"|upper}}</td>
                             <td><i>This document will be reviewed on:
                                     <br>{{header.reviewdate|date:"F Y"}}</i></td>
-                            <td><i>Rev of DN: {{header.dnrev}}<br>Date: {{header.createdon|date:"d-m-Y"}}</i></td>
+                            <td class="text-left"><i>Rev of DN: {{header.dnrev}}<br>Date: {{header.createdon|date:"d-m-Y"}}</i></td>
                         </tr>
                         <tr>
                             <td colspan="3">
