--- a/mainApp/templates/config.html
+++ b/mainApp/templates/config.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 {% block titlepage %}
-<h1>Upload Batch</h1>
+<h1>Configuration</h1>
 {% endblock %}
 {% block sidebar %}
 {% include "sidebar.html" %}
