--- a/mainApp/templates/report_batch_pdf_template2.html
+++ b/mainApp/templates/report_batch_pdf_template2.html
@@ -36,9 +36,9 @@
                                         <br><small>{{header.reporttitle.subtitle}}</small></i></b></td>
                             <td><i>{{header.department.name}}</i></td>
                         </tr>
-                        <tr class="text-center align-middle h5">
-                            <td><i>DN: {{header.dnno}}</i><br>Eff. Date: {{header.effectivedate|date:"d b Y"|upper}}</td>
-                            <td><i>This document will be reviewed on:
+                        <tr class="align-middle h5">
+                            <td class="text-left"><i>DN: {{header.dnno}}</i><br>Eff. Date: {{header.effectivedate|date:"d b Y"|upper}}</td>
+                            <td class="text-center"><i>This document will be reviewed on:
                                     <br>{{header.reviewdate|date:"F Y"}}</i></td>
                             <td class="text-left"><i>Rev of DN: {{header.dnrev}}<br>Date: {{header.createdon|date:"d-m-Y"}}</i></td>
                         </tr>
