--- a/mainApp/templates/home.html
+++ b/mainApp/templates/home.html
@@ -153,7 +153,7 @@
     <div class="col-md-6">
         <div class="card">
             <div class="card-header">
-                <button id="btnapprovalmodal" class="btn btn-danger float-right"><span id="spvapprovalstatus"></span></button>
+                <button id="btnapprovalmodal" class="btn btn-danger float-right"><span id="spvapprovalstatus">----</span></button>
                 <table>
                     <tr>
                         <td>PRODUK</td>
