--- a/mainApp/templates/config.html
+++ b/mainApp/templates/config.html
@@ -35,7 +35,7 @@
                         <th>Report Title</th>
                         <th>Department</th>
                         <th>Weight Adjustment</th>
-                        <th>Petugas Timbang / Gudang</th>
+                        <th>Petugas Penimbangan / Gudang</th>
                         <th>SPV Approval</th>
                     </tr>
                     </thead>
