--- a/mainApp/templates/history.html
+++ b/mainApp/templates/history.html
@@ -77,7 +77,7 @@
                             <th>Weight</th>
                             <th>Status</th>
                             <th>Input Date</th>
-                            <th>Ptgs Timbang / Gudang</th>
+                            <th>Petugas Penimbangan / Gudang</th>
                             <th>Action</th>
                         </tr>
                     </thead>
