--- a/mainApp/templates/report_batch.html
+++ b/mainApp/templates/report_batch.html
@@ -39,7 +39,7 @@
                             <th>Weight (gram)</th>
                             <th>Status</th>
                             <th>Input Date</th>
-                            <th>Ptgs Timbang</th>
+                            <th>Ptgs Penimbangan</th>
                             <th>Ptgs Gudang</th>
                         </tr>
                     </thead>
@@ -54,7 +54,7 @@
                                 {% if row.status == 1 %}
                                 OK
                                 {% elif row.status == 3 %}
-                                Last Box=
+                                Last Box
                                 {% elif row.status == 2 %}
                                 <i class="fas fa-times text-red"></i>
                                 {% endif %}
