--- a/mainApp/templates/report_batch_pdf_template2.html
+++ b/mainApp/templates/report_batch_pdf_template2.html
@@ -62,7 +62,7 @@
                                                     <th>Tanggal Penimbangan</th>
                                                     <th>No. Karton</th>
                                                     <th>Hasil Penimbangan (gram)</th>
-                                                    <th>Operator</th>
+                                                    <th>Ptgs Penimbangan/ Gudang</th>
                                                 </tr>
                                                 {% if not data %}
                                                 <tr class="text-center">
