pisah change password dari edit, change password tanpa password lama

--- a/secureapp/templates/registration/change_other_password.html
+++ b/secureapp/templates/registration/change_other_password.html
@@ -32,7 +32,7 @@
                                     {% endfor %}
                                 </ul>
                                 {% endif %}
-                                <form action="{% url 'changepwd' %}" method="POST" autocomplete="off">
+                                <form action="{% url 'changeotherspwd' id%}" method="POST" autocomplete="off">
                                     <div class="row">
                                         {% csrf_token %}
                                         <div class="col-lg-6">
