--- a/secureapp/templates/registration/userlist.html
+++ b/secureapp/templates/registration/userlist.html
@@ -53,6 +53,8 @@
                                             {% endfor %}</td>
                                             <td><a class="btn btn-secondary" href="{% url 'edituser' row.id %}"><i
                                                         class="fas fa-edit"></i></a>
+                                                <a class="btn btn-success" href="{% url 'changeotherspwd' row.id %}"><i
+                                                        class="fas fa-key"></i></a>
                                                 <a class="btn btn-primary" href="{% url 'groupadd' row.id %}"><i
                                                         class="fas fa-users"></i></a>
                                                 <a class="btn btn-danger" href="{% url 'deleteuser' row.id %}"
