--- a/mainApp/templates/config.html
+++ b/mainApp/templates/config.html
@@ -35,8 +35,7 @@
                         <th>Report Title</th>
                         <th>Department</th>
                         <th>Weight Adjustment</th>
-                        <th>Petugas Penimbangan / Gudang</th>
-                        <th>SPV Approval</th>
+                        <th>Petugas Penimbangan / Gudang Aktif</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -46,7 +45,6 @@
                         <td>{{row.department}}</td>
                         <td>{{row.weightadjustment}}</td>
                         <td>{{row.operator}} / {{row.petugasgudang}}</td>
-                        <td>{{row.spvapproval}} <br> Exp: {{row.spvapprovalexpireddate}}</td>
                     </tr>
                     {%endfor%}
                     </tbody>
