--- a/mainApp/templates/report_batch_pdf_template2.html
+++ b/mainApp/templates/report_batch_pdf_template2.html
@@ -26,10 +26,10 @@
                 <div class="col-sm-12 invoice-col">
                     <table class="table table-bordered">
                         <tr class="text-center align-middle h5">
-                            <td rowspan="2"><img src="{% static 'others/logo.png' %}">
+                            <td rowspan="2" width="300px" class="align-middle"><img height="100px" src="{% static 'others/logo.png' %}">
                             </td>
-                            <td><b><i>FORM</i></b></td>
-                            <td></td>
+                            <td width="300px" class="align-middle"><b><i>FORM</i></b></td>
+                            <td width="300px"></td>
                         </tr>
                         <tr class="text-center align-middle h5">
                             <td><b><i>{{header.reporttitle.title}}
@@ -46,12 +46,14 @@
                             <td colspan="3">
                                 <table border="0" class="table table-borderless">
                                     <tr>
-                                        <td colspan="2">Nama Produk</td>
-                                        <td colspan="2">: {{header.product.name}}</td>
+                                        <td width="200px">Nama Produk</td>
+                                        <td colspan="3">: {{header.product.name}}</td>
                                     </tr>
                                     <tr>
-                                        <td colspan="2">No Batch</td>
-                                        <td colspan="2">: {{header.batchno}}</td>
+                                        <td width="200px">No Batch</td>
+                                        <td>: {{header.batchno}}</td>
+                                        <td width="200px">Exp Date</td>
+                                        <td colspan="2">: {{signature.expireddate}}</td>
                                     </tr>
                                 </table>
                                 <table class="table table-borderless">
@@ -99,10 +101,10 @@
                     </table>
                     <table class="table table-bordered">
                         <tr class="text-center text-bold">
-                            <td>Dilakukan Oleh</td>
-                            <td>Diperiksa Oleh</td>
-                            <td>Diverifikasi Oleh</td>
-                            <td>Diverifikasi Oleh</td>
+                            <td width="200px">Dilakukan Oleh</td>
+                            <td width="200px">Diperiksa Oleh</td>
+                            <td width="200px">Diverifikasi Oleh</td>
+                            <td width="200px">Diverifikasi Oleh</td>
                         </tr>
                         <tr class="text-center text-bold">
                             <td>Petugas Penimbangan</td>
@@ -117,10 +119,10 @@
                             <td>Paraf:</td>
                         </tr>
                         <tr>
-                            <td>Nama: {{signature.operator.first_name}} {{signature.operator.last_name}}</td>
-                            <td>Nama: {{signature.petugasgudang|default_if_none:"-"}}</td>
-                            <td>Nama: {{signature.spvpabrik.first_name}} {{signature.spvpabrik.last_name}}</td>
-                            <td>Nama: {{signature.spvgudang.first_name}} {{signature.spvgudang.last_name}}</td>
+                            <td>Nama: {{signature.operator.first_name|title}} {{signature.operator.last_name|title}}</td>
+                            <td>Nama: {{signature.petugasgudang|default_if_none:"-"|title}}</td>
+                            <td>Nama: {{signature.spvpabrik.first_name|title}} {{signature.spvpabrik.last_name|title}}</td>
+                            <td>Nama: {{signature.spvgudang.first_name|title}} {{signature.spvgudang.last_name|title}}</td>
                         </tr>
                         <tr>
                             <td>Tanggal:</td>
