--- a/mainApp/templates/report_batch_pdf_template2.html
+++ b/mainApp/templates/report_batch_pdf_template2.html
@@ -46,14 +46,14 @@
                             <td colspan="3">
                                 <table border="0" class="table table-borderless">
                                     <tr>
-                                        <td width="200px">Nama Produk</td>
+                                        <td width="150px">Nama Produk</td>
                                         <td colspan="3">: {{header.product.name}}</td>
                                     </tr>
                                     <tr>
-                                        <td width="200px">No Batch</td>
-                                        <td>: {{header.batchno}}</td>
-                                        <td width="200px">Exp Date</td>
-                                        <td colspan="2">: {{signature.expireddate}}</td>
+                                        <td width="150px">No Batch</td>
+                                        <td width="200px">: {{header.batchno}}</td>
+                                        <td width="150px">Exp Date</td>
+                                        <td width="200px">: {{signature.expireddate}}</td>
                                     </tr>
                                 </table>
                                 <table class="table table-borderless">
