silang to reject

--- a/mainApp/templates/report_batch.html
+++ b/mainApp/templates/report_batch.html
@@ -56,7 +56,7 @@
                                 {% elif row.status == 3 %}
                                 Last Box
                                 {% elif row.status == 2 %}
-                                <i class="fas fa-times text-red"></i>
+                                Reject
                                 {% endif %}
                             </td>
                             <td>{{row.input_date|date:"Y/n/j h:m:i"}}</td>
