--- a/mainApp/templates/batchno_history.html
+++ b/mainApp/templates/batchno_history.html
@@ -29,7 +29,7 @@
                             <td>{{row.product_name}}</td>
                             <td>{{row.batchno}}</td>
                             <td>{{row.boxno}}</td>
-                            <td>{{row.iot_weight}}</td>
+                            <td>{{row.iot_weight|floatformat:4}}</td>
                             <td>
                                 {% if row.status == 1 %}
                                 OK
