--- a/mainApp/templates/upload_batch.html
+++ b/mainApp/templates/upload_batch.html
@@ -46,7 +46,7 @@
                         <td>{{row.product_name}}</td>
                         <td>{{row.batchno}}</td>
                         <td>{{row.boxno}}</td>
-                        <td>{{row.weight}}</td>
+                        <td>{{row.weight|floatformat:4}}</td>
                         <td>{{row.measuredate|date:"j/n/Y"}}</td>
                         <td><a class="btn btn-danger" href="{% url 'deleteuploadbatch' row.id %}"
                                 onclick="return confirm('Apakah anda yakin untuk menghapus data?')"><i class="fas fa-trash"></i></a>
