--- a/mainApp/templates/report_batch_pdf_template2.html
+++ b/mainApp/templates/report_batch_pdf_template2.html
@@ -46,13 +46,13 @@
                             <td colspan="3">
                                 <table border="0" class="table table-borderless">
                                     <tr>
-                                        <td width="150px">Nama Produk</td>
+                                        <td width="150px">{{config.nama_produk}}</td>
                                         <td colspan="3">: {{header.product.name}}</td>
                                     </tr>
                                     <tr>
-                                        <td width="150px">No Batch</td>
+                                        <td width="150px">{{config.no_batch}}</td>
                                         <td width="200px">: {{header.batchno}}</td>
-                                        <td width="150px">Exp Date</td>
+                                        <td width="150px">{{config.expired_date}}</td>
                                         <td width="200px">: {{signature.expireddate}}</td>
                                     </tr>
                                 </table>
@@ -61,9 +61,9 @@
                                         <td>
                                             <table class="table table-striped table-bordered">
                                                 <tr class="text-center">
-                                                    <th>Tanggal Penimbangan</th>
-                                                    <th>No. Karton</th>
-                                                    <th>Hasil Penimbangan (gram)</th>
+                                                    <th>{{config.tanggal_penimbangan}}</th>
+                                                    <th>{{config.no_karton}}</th>
+                                                    <th>{{config.hasil_penimbangan}}</th>
                                                 </tr>
                                                 {% if not data %}
                                                 <tr class="text-center">
@@ -83,9 +83,9 @@
                                         <td>
                                             <table class="table table-striped table-bordered">
                                                 <tr class="text-center">
-                                                    <th>Tanggal Penimbangan</th>
-                                                    <th>No. Karton</th>
-                                                    <th>Hasil Penimbangan (gram)</th>
+                                                    <th>{{config.tanggal_penimbangan}}</th>
+                                                    <th>{{config.no_karton}}</th>
+                                                    <th>{{config.hasil_penimbangan}}</th>
                                                 </tr>
                                                 {% endif %}
                                                 {%endfor%}
@@ -98,34 +98,34 @@
                     </table>
                     <table class="table table-bordered">
                         <tr class="text-center text-bold">
-                            <td width="200px">Dilakukan Oleh</td>
-                            <td width="200px">Diperiksa Oleh</td>
-                            <td width="200px">Diverifikasi Oleh</td>
-                            <td width="200px">Diverifikasi Oleh</td>
+                            <td width="200px">{{config.dilakukan_oleh}}</td>
+                            <td width="200px">{{config.diperiksa_oleh}}</td>
+                            <td width="200px">{{config.diverifikasi_oleh}}</td>
+                            <td width="200px">{{config.diverifikasi_oleh}}</td>
                         </tr>
                         <tr class="text-center text-bold">
-                            <td>Petugas Penimbangan</td>
-                            <td>Petugas Gudang</td>
-                            <td>Supervisor Produksi</td>
-                            <td>Supervisor DS&S</td>
+                            <td>{{config.user_1}}</td>
+                            <td>{{config.user_2}}</td>
+                            <td>{{config.user_3}}</td>
+                            <td>{{config.user_4}}</td>
                         </tr>
                         <tr height="100px">
-                            <td>Paraf:</td>
-                            <td>Paraf:</td>
-                            <td>Paraf:</td>
-                            <td>Paraf:</td>
+                            <td{{config.nama_produk}}Paraf:</td>
+                            <td>{{config.paraf}}:</td>
+                            <td>{{config.paraf}}:</td>
+                            <td>{{config.paraf}}:</td>
                         </tr>
                         <tr>
-                            <td>Nama: {{signature.operator.first_name|title}} {{signature.operator.last_name|title}}</td>
-                            <td>Nama: {{signature.petugasgudang|default_if_none:"-"|title}}</td>
-                            <td>Nama: {{signature.spvpabrik.first_name|title}} {{signature.spvpabrik.last_name|title}}</td>
-                            <td>Nama: {{signature.spvgudang.first_name|title}} {{signature.spvgudang.last_name|title}}</td>
+                            <td>{{config.nama}}: {{signature.operator.first_name|title}} {{signature.operator.last_name|title}}</td>
+                            <td>{{config.nama}}: {{signature.petugasgudang|default_if_none:"-"|title}}</td>
+                            <td>{{config.nama}}: {{signature.spvpabrik.first_name|title}} {{signature.spvpabrik.last_name|title}}</td>
+                            <td>{{config.nama}}: {{signature.spvgudang.first_name|title}} {{signature.spvgudang.last_name|title}}</td>
                         </tr>
                         <tr>
-                            <td>Tanggal:</td>
-                            <td>Tanggal:</td>
-                            <td>Tanggal:</td>
-                            <td>Tanggal:</td>
+                            <td>{{config.tanggal_paraf}}: {% now "d-m-Y" %}</td>
+                            <td>{{config.tanggal_paraf}}: {% now "d-m-Y" %}</td>
+                            <td>{{config.tanggal_paraf}}: {% now "d-m-Y" %}</td>
+                            <td>{{config.tanggal_paraf}}: {% now "d-m-Y" %}</td>
                         </tr>
                     </table>
                 </div>
