--- a/mainApp/templates/report_batch_pdf_template2.html
+++ b/mainApp/templates/report_batch_pdf_template2.html
@@ -28,7 +28,7 @@
                         <tr class="text-center align-middle h5">
                             <td rowspan="2" width="300px" class="align-middle"><img height="100px" src="{% static 'others/logo.png' %}">
                             </td>
-                            <td width="300px" class="align-middle"><b><i>FORM</i></b></td>
+                            <td width="300px" class="align-middle"><b><i>{{config.pdf_form}}</i></b></td>
                             <td width="300px"></td>
                         </tr>
                         <tr class="text-center align-middle h5">
@@ -37,22 +37,22 @@
                             <td><i>{{header.department.name}}</i></td>
                         </tr>
                         <tr class="align-middle h5">
-                            <td class="text-left"><i>DN: {{header.dnno}}</i><br>Eff. Date: {{header.effectivedate|date:"d b Y"|upper}}</td>
-                            <td class="text-center"><i>This document will be reviewed on:
+                            <td class="text-left"><i>{{config.pdf_dn}}: {{header.dnno}}</i><br>{{config.pdf_eff_date}}: {{header.effectivedate|date:"d b Y"|upper}}</td>
+                            <td class="text-center"><i>{{config.pdf_will_be_reviewed}}:
                                     <br>{{header.reviewdate|date:"F Y"}}</i></td>
-                            <td class="text-left"><i>Rev of DN: {{header.dnrev|stringformat:"02d"}}<br>Date: {{header.createdon|date:"d-m-Y"}}</i></td>
+                            <td class="text-left"><i>{{config.pdf_rev_of_dn}}: {{header.dnrev|stringformat:"02d"}}<br>{{config.pdf_header_date}}: {{header.createdon|date:"d-m-Y"}}</i></td>
                         </tr>
                         <tr>
                             <td colspan="3">
                                 <table border="0" class="table table-borderless">
                                     <tr>
-                                        <td width="150px">{{config.nama_produk}}</td>
+                                        <td width="150px">{{config.pdf_nama_produk}}</td>
                                         <td colspan="3">: {{header.product.name}}</td>
                                     </tr>
                                     <tr>
-                                        <td width="150px">{{config.no_batch}}</td>
+                                        <td width="150px">{{config.pdf_no_batch}}</td>
                                         <td width="200px">: {{header.batchno}}</td>
-                                        <td width="150px">{{config.expired_date}}</td>
+                                        <td width="150px">{{config.pdf_expired_date}}</td>
                                         <td width="200px">: {{signature.expireddate}}</td>
                                     </tr>
                                 </table>
@@ -61,9 +61,9 @@
                                         <td>
                                             <table class="table table-striped table-bordered">
                                                 <tr class="text-center">
-                                                    <th>{{config.tanggal_penimbangan}}</th>
-                                                    <th>{{config.no_karton}}</th>
-                                                    <th>{{config.hasil_penimbangan}}</th>
+                                                    <th>{{config.pdf_tanggal_penimbangan}}</th>
+                                                    <th>{{config.pdf_no_karton}}</th>
+                                                    <th>{{config.pdf_hasil_penimbangan}}</th>
                                                 </tr>
                                                 {% if not data %}
                                                 <tr class="text-center">
@@ -75,7 +75,7 @@
                                                 <tr>
                                                     <td>{{row.createdon|date:"d/m/Y H:i:s"}}</td>
                                                     <td>{{row.boxno}}</td>
-                                                    <td class="text-right">{{row.weight|floatformat:4}}</td>
+                                                    <td class="text-right">{{row.weight|floatformat:1}}</td>
                                                 </tr>
                                                 {% if forloop.counter|divisibleby:rowlen and forloop.counter != data.count %}
                                             </table>
@@ -83,9 +83,9 @@
                                         <td>
                                             <table class="table table-striped table-bordered">
                                                 <tr class="text-center">
-                                                    <th>{{config.tanggal_penimbangan}}</th>
-                                                    <th>{{config.no_karton}}</th>
-                                                    <th>{{config.hasil_penimbangan}}</th>
+                                                    <th>{{config.pdf_tanggal_penimbangan}}</th>
+                                                    <th>{{config.pdf_no_karton}}</th>
+                                                    <th>{{config.pdf_hasil_penimbangan}}</th>
                                                 </tr>
                                                 {% endif %}
                                                 {%endfor%}
@@ -98,34 +98,34 @@
                     </table>
                     <table class="table table-bordered">
                         <tr class="text-center text-bold">
-                            <td width="200px">{{config.dilakukan_oleh}}</td>
-                            <td width="200px">{{config.diperiksa_oleh}}</td>
-                            <td width="200px">{{config.diverifikasi_oleh}}</td>
-                            <td width="200px">{{config.diverifikasi_oleh}}</td>
+                            <td width="200px">{{config.pdf_dilakukan_oleh}}</td>
+                            <td width="200px">{{config.pdf_diperiksa_oleh}}</td>
+                            <td width="200px">{{config.pdf_diverifikasi_oleh}}</td>
+                            <td width="200px">{{config.pdf_diverifikasi_oleh}}</td>
                         </tr>
                         <tr class="text-center text-bold">
-                            <td>{{config.user_1}}</td>
-                            <td>{{config.user_2}}</td>
-                            <td>{{config.user_3}}</td>
-                            <td>{{config.user_4}}</td>
+                            <td>{{config.pdf_user_1}}</td>
+                            <td>{{config.pdf_user_2}}</td>
+                            <td>{{config.pdf_user_3}}</td>
+                            <td>{{config.pdf_user_4}}</td>
                         </tr>
                         <tr height="100px">
-                            <td{{config.nama_produk}}Paraf:</td>
-                            <td>{{config.paraf}}:</td>
-                            <td>{{config.paraf}}:</td>
-                            <td>{{config.paraf}}:</td>
+                            <td{{config.pdf_nama_produk}}Paraf:</td>
+                            <td>{{config.pdf_paraf}}:</td>
+                            <td>{{config.pdf_paraf}}:</td>
+                            <td>{{config.pdf_paraf}}:</td>
                         </tr>
                         <tr>
-                            <td>{{config.nama}}: {{signature.operator.first_name|title}} {{signature.operator.last_name|title}}</td>
-                            <td>{{config.nama}}: {{signature.petugasgudang|default_if_none:"-"|title}}</td>
-                            <td>{{config.nama}}: {{signature.spvpabrik.first_name|title}} {{signature.spvpabrik.last_name|title}}</td>
-                            <td>{{config.nama}}: {{signature.spvgudang.first_name|title}} {{signature.spvgudang.last_name|title}}</td>
+                            <td>{{config.pdf_nama}}: {{signature.operator.first_name|title}} {{signature.operator.last_name|title}}</td>
+                            <td>{{config.pdf_nama}}: {{signature.petugasgudang|default_if_none:"-"|title}}</td>
+                            <td>{{config.pdf_nama}}: {{signature.spvpabrik.first_name|title}} {{signature.spvpabrik.last_name|title}}</td>
+                            <td>{{config.pdf_nama}}: {{signature.spvgudang.first_name|title}} {{signature.spvgudang.last_name|title}}</td>
                         </tr>
                         <tr>
-                            <td>{{config.tanggal_paraf}}: {% now "d-m-Y" %}</td>
-                            <td>{{config.tanggal_paraf}}: {% now "d-m-Y" %}</td>
-                            <td>{{config.tanggal_paraf}}: {% now "d-m-Y" %}</td>
-                            <td>{{config.tanggal_paraf}}: {% now "d-m-Y" %}</td>
+                            <td>{{config.pdf_tanggal_paraf}}: {% now "d-m-Y" %}</td>
+                            <td>{{config.pdf_tanggal_paraf}}: {% now "d-m-Y" %}</td>
+                            <td>{{config.pdf_tanggal_paraf}}: {% now "d-m-Y" %}</td>
+                            <td>{{config.pdf_tanggal_paraf}}: {% now "d-m-Y" %}</td>
                         </tr>
                     </table>
                 </div>
