--- a/mainApp/templates/home.html
+++ b/mainApp/templates/home.html
@@ -128,6 +128,7 @@
             <div class="col-md-4">
                 <div class="form-group">
                     <button class="btn btn-block btn-success" id="submitBoxno" style="height: 174px;">PILIH BOX</button>
+                    <a class="btn btn-block btn-danger" href="{% url 'runconveyorbc' %}" class="product-title">RUN CONVEYOR</a>
                 </div>
             </div>
         </div>
