--- a/mainApp/templates/config.html
+++ b/mainApp/templates/config.html
@@ -16,11 +16,15 @@
                         <div class="col-lg-6">
                             {% csrf_token %}
                             {{ form | crispy }}<hr>
-                            <input class="btn btn-success" type="submit" value="Simpan">
                         </div>
                         <div class="col-lg-6">
                             {% csrf_token %}
                             {{ form2 | crispy }}
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-12 text-left">
+                            <input class="btn btn-success" type="submit" value="Simpan">
                         </div>
                     </div>
                 </form>
@@ -28,7 +32,7 @@
         </div>
     </div>
 </div>
-<div class="card">
+<!-- <div class="card">
     <div class="card-body">
         <div class="row">
             <div class="col-lg-12">
@@ -55,7 +59,7 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 {% endblock %}
 {% block additionaljs %}
 <script>
