--- a/mainApp/templates/report_batch_pdf_template2.html
+++ b/mainApp/templates/report_batch_pdf_template2.html
@@ -15,8 +15,8 @@
     <!-- <script
         nonce="7941c383-69e0-408e-b64f-8349f35440b6">(function (w, d) { !function (a, e, t, r) { a.zarazData = a.zarazData || {}, a.zarazData.executed = [], a.zaraz = { deferred: [] }, a.zaraz.q = [], a.zaraz._f = function (e) { return function () { var t = Array.prototype.slice.call(arguments); a.zaraz.q.push({ m: e, a: t }) } }; for (const e of ["track", "set", "ecommerce", "debug"]) a.zaraz[e] = a.zaraz._f(e); a.addEventListener("DOMContentLoaded", (() => { var t = e.getElementsByTagName(r)[0], z = e.createElement(r), n = e.getElementsByTagName("title")[0]; for (n && (a.zarazData.t = e.getElementsByTagName("title")[0].text), a.zarazData.x = Math.random(), a.zarazData.w = a.screen.width, a.zarazData.h = a.screen.height, a.zarazData.j = a.innerHeight, a.zarazData.e = a.innerWidth, a.zarazData.l = a.location.href, a.zarazData.r = e.referrer, a.zarazData.k = a.screen.colorDepth, a.zarazData.n = e.characterSet, a.zarazData.o = (new Date).getTimezoneOffset(), a.zarazData.q = []; a.zaraz.q.length;) { const e = a.zaraz.q.shift(); a.zarazData.q.push(e) } z.defer = !0; for (const e of [localStorage, sessionStorage]) Object.keys(e).filter((a => a.startsWith("_zaraz_"))).forEach((t => { try { a.zarazData["z_" + t.slice(7)] = JSON.parse(e.getItem(t)) } catch { a.zarazData["z_" + t.slice(7)] = e.getItem(t) } })); z.referrerPolicy = "origin", z.src = "/cdn-cgi/zaraz/s.js?z=" + btoa(encodeURIComponent(JSON.stringify(a.zarazData))), t.parentNode.insertBefore(z, t) })) }(w, d, 0, "script"); })(window, document);</script> -->
 
-    <script type="text/javascript" src="{% static 'others/paged.polyfill.js' %}"></script>
-    
+    <!-- POLYFIL - PAGINATION -->
+    <!-- <script type="text/javascript" src="{% static 'others/paged.polyfill.js' %}"></script>
     <link rel="stylesheet" href="{% static 'others/interface.css' %}">
     <style>
         /* Use A4 paper in landscape orientation */
@@ -32,7 +32,7 @@
         }
         } */
         .page-number:before {content: "Pages " counter(page) " of " counter(pages);font-style: italic;}
-    </style>
+    </style> -->
 </head>
 
 <body>
@@ -128,7 +128,7 @@
                             <td>{{config.pdf_user_4}}</td>
                         </tr>
                         <tr height="100px">
-                            <td{{config.pdf_nama_produk}}Paraf:</td>
+                            <td>{{config.pdf_paraf}}:</td>
                             <td>{{config.pdf_paraf}}:</td>
                             <td>{{config.pdf_paraf}}:</td>
                             <td>{{config.pdf_paraf}}:</td>
@@ -140,10 +140,10 @@
                             <td>{{config.pdf_nama}}: {{signature.spvgudang.first_name|title}} {{signature.spvgudang.last_name|title}}</td>
                         </tr>
                         <tr>
-                            <td>{{config.pdf_tanggal_paraf}}: {% now "d-m-Y" %}</td>
-                            <td>{{config.pdf_tanggal_paraf}}: {% now "d-m-Y" %}</td>
-                            <td>{{config.pdf_tanggal_paraf}}: {% now "d-m-Y" %}</td>
-                            <td>{{config.pdf_tanggal_paraf}}: {% now "d-m-Y" %}</td>
+                            <td>{{config.pdf_tanggal_paraf}}: {{header.signingdate|date:"d-m-Y"}}</td>
+                            <td>{{config.pdf_tanggal_paraf}}: {{header.signingdate|date:"d-m-Y"}}</td>
+                            <td>{{config.pdf_tanggal_paraf}}: {{header.signingdate|date:"d-m-Y"}}</td>
+                            <td>{{config.pdf_tanggal_paraf}}: {{header.signingdate|date:"d-m-Y"}}</td>
                         </tr>
                     </table>
                 </div>
@@ -157,7 +157,7 @@
     <script>
         setTimeout(() => {
                 window.print();
-            }, 2500)
+            }, 4000)
     </script>
 </body>
 
