--- a/mainApp/templates/sidebar.html
+++ b/mainApp/templates/sidebar.html
@@ -63,6 +63,12 @@
                         <p>Weighing History</p>
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a href="{% url 'reprint'%}" class="nav-link">
+                        <i class="far fa-circle nav-icon"></i>
+                        <p>Reprint</p>
+                    </a>
+                </li>
                 <!-- <li class="nav-item">
                     <a href="{% url 'viewuploadbatch'%}" class="nav-link">
                         <i class="far fa-circle nav-icon"></i>
