--- a/mainApp/templates/reprint.html
+++ b/mainApp/templates/reprint.html
@@ -39,7 +39,7 @@
             <div class="col-md-4">
                 <div class="form-group">
                     <button class="btn btn-block btn-success" type="submit" style="height: 194px;">PILIH BOX</button>
-                    <button class="btn btn-block btn-success" id="btnrelayoff">FORCE STOP CONVEYOR</button>
+                    <button class="btn btn-block btn-danger" id="btnrelayoff">FORCE STOP CONVEYOR</button>
                 </div>
             </div>
             </div>
