--- a/mainApp/templates/report_batch_pdf_template2.html
+++ b/mainApp/templates/report_batch_pdf_template2.html
@@ -58,7 +58,7 @@
                             <td class="text-left"><i>{{config.pdf_dn}}: {{header.dnno}}</i><br>{{config.pdf_eff_date}}: {{header.effectivedate|date:"d b Y"|upper}}</td>
                             <td class="text-center"><i>{{config.pdf_will_be_reviewed}}:
                                     <br>{{header.reviewdate|date:"F Y"}}</i></td>
-                            <td class="text-left"><i>{{config.pdf_rev_of_dn}}: {{header.dnrev|stringformat:"02d"}}<br>{{config.pdf_header_date}}: {{header.createdon|date:"d-m-Y"}}</i></td>
+                            <td class="text-left"><i>{{config.pdf_rev_of_dn}}: {{header.dnrev|stringformat:"02d"}}<br>{{config.pdf_dn_date}}: {{header.createdon|date:"d-m-Y"}}</i></td>
                         </tr>
                         <tr>
                             <td colspan="3">
