salah salah salah

--- a/mainApp/templates/reprint.html
+++ b/mainApp/templates/reprint.html
@@ -144,7 +144,7 @@
     }
 
     $("#btnrelayoff").click(function () {
-        var url = "{% url 'runrelayon' %}"
+        var url = "{% url 'runrelayoff' %}"
         $.ajax({
             type: "GET",
             dataType: "json",
